@@ -1,3 +1,5 @@
+- Refactor: Cleans up refactor [#qubIT-Fenix-7009]
+
 7.24.9 (11-07-2025)
 - Refactor: Remove references for CandidaciesExtensionsResources [#qubIT-Fenix-3172]
 
